applications/openeuler-quickissue-website/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/server-snippet: |
      add_header X-Content-Type-Options "nosniff";
      add_header X-XSS-Protection "1; mode=block";
      add_header X-Frame-Options "DENY";
      add_header Cache-Control "no-cache";
      add_header Pragma "no-cache";
      add_header Content-Security-Policy "script-src 'self' 'unsafe-inline' 'unsafe-eval' ; object-src 'none'; frame-src 'none'";
  name: openeuler-quickissue-website-ingress
  namespace: openeuler-quickissue-website
spec:
  rules:
  - host: quickissue.openeuler.org
    http:
      paths:
      - backend:
          serviceName: openeuler-quickissue-website-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - quickissue.openeuler.org
    secretName: openeuler-org-tls
